--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">             
         <tr>
-            <td><img src="images/vage-modified.png" alt="This is the great person one and only vageshwari chaudhary richest person in the world">
+            <td><img src="vage-modified.png" alt="This is the great person one and only vageshwari chaudhary richest person in the world">
                 </td>
             <td><h1>Vageshwari Chaudhary</h        1> 
                 <p><em>Founder and CEO of <strong><a href="https://www.tesla.com/">tesla</a> and <a href="https://www.spacex.com/">spacex</a></strong></em></p>
